# starbench

./: .gitignore  README.md  pyproject.toml  starbench.py
.ipr/: hibench-on-physix.sh  hibench.job  hibench.py  launch-perf-jobs.sh  readme.md  starbench-template.job  starbench.py
src/starbench/: __init__.py  core.py  existingdir.py  gitcloner.py  main.py  passwordfile.py
test/: test_starbench.py
test/mamul1/: CMakeLists.txt  mamul1.F90
usecases/ipr/: readme.md  starbench-template.job
usecases/ipr/hibench/: hibench-on-physix.sh  hibenchonphysix.py  readme.md  showresults.py  starbench-template.job
